2004-03-31  Christian Schaller <Uraeus@gnome.org>

	* Add appicon for rsvg-viewer

2004-03-20  Dom Lachowicz <cinamod@hotmail.com>

	* *.c: Better external image scaling policy (mainly for SVG images)
	* *.c: Modifications to the GZip SVG handle
	* *.c: Preparation for gettext and better error handling
	
2004-03-20  Dom Lachowicz <cinamod@hotmail.com>

	* test-display.c, moz-plugin.c: Allow rsvg-view to set a bgcolor other
	than transparent. Make moz plugin set that color to be "white"
	
2004-03-20  Dom Lachowicz <cinamod@hotmail.com>

	* *: "currentColor" and "inherit" colors mostly work. Caveat: they
	don't work for filters and gradients. TODO
	
2004-03-20  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-css.c: Fix rgb percent handling for 
	http://www.w3.org/Graphics/SVG/Test/20030813/htmlframe/full-color-prop-02-f.html
	
2004-03-20  Dom Lachowicz <cinamod@hotmail.com>

	* autogen.sh: Downgrade libtool requirement to 1.4.2
	* rsvg.c: 137765
	
2004-03-18  Christian Schaller <Uraeus@gnome.org>

	* autogen.sh: Remove need for gnome-common
	  mozilla-plugin: Remove + symbol in Makefile that made autogen barf
	  Fix up spec file for latest changes and fix some old sins

2004-03-20  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-styles.c: fixes to masks.
	* rsvg-filter.c: fixes to feComposite
	* rsvg.c: percentage based SVG dimentions work
	
2004-03-18  Dom Lachowicz <cinamod@hotmail.com>

	* *: Memory leak fixes
	
2004-03-17  Dom Lachowicz <cinamod@hotmail.com>

	* *: re-merge rsvg-filters branch back into HEAD
	
2004-03-16  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-styles.c: Implemented masks.
	
2004-03-16  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-bpath-util.c: Applied double move fix contributed by ross 
	alexander.

2004-03-14  Dom Lachowicz <cinamod@.hotmail.com>

	* test-performance.c: Make this a useful performance tester
	
2004-03-12  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-shapes.c: Allow for base64 embedded image data
	